<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FotoBlind</string>
    <string name="buttonfirst_position">Zlatý řez v pravo</string>
    <string name="buttonsecond_position">Na střed</string>
    <string name="buttonthird_position">Zlatý řez v levo</string>
    <string name="buttonfirst_navigation">Hlas</string>
    <string name="buttonsecond_navigation">Zvuk</string>
    <string name="buttonthird_navigation">Vibrace</string>
    <string name="buttonfirst_face">Pasovka</string>
    <string name="buttonsecond_face">Polocelek</string>
    <string name="buttonthird_face">Volná bez změny velikosti obličeje</string>
    <string name="final_delete">smazat</string>
    <string name="final_facebook">facebook</string>
    <string name="final_sdílet">sdílet</string>
    <string name="final_twitter">twitter</string>
    <string name="final_instagram">instagram</string>
    <string name="NahledBtbDesription">nahled</string>
    <string name="previewImgDescription">Velky nahled</string>
    <string name="PreviewActivityLable">nahled</string>
    <string name="CameraActivityLable">Fotoaparat</string>
    <string name="FinalActivityLabel">Vyber cinnost</string>
    <string name="FaceActivityLabel">Druh fotky</string>
    <string name="NavigationActivityLabel">Navigace</string>
    <string name="PositionActivityLabel">Zarovnání obličeje</string>
</resources>
