<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/black"
              android:orientation="vertical" tools:context=".MyActivity">
    <Button
            style="@style/BigButtons"
            android:text="@string/buttonfirst_position"
            android:onClick="clickFirst"/>
    <Button
            style="@style/BigButtons"
            android:text="@string/buttonsecond_position"
            android:onClick="clickCenter"/>

    <Button
            style="@style/BigButtons"
            android:text="@string/buttonthird_position"
            android:onClick="clickLeft"/>


</LinearLayout>