<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/black"
              android:orientation="vertical" tools:context=".MyActivity">
    <Button
            style="@style/BigButtons"
            android:text="@string/buttonfirst_navigation"
            android:onClick="clickThird"/>
    <Button
            style="@style/BigButtons"
            android:text="@string/buttonsecond_navigation"
            android:onClick="clickSound"/>

    <Button
            style="@style/BigButtons"
            android:text="@string/buttonthird_navigation"
            android:onClick="clickVibration"/>


</LinearLayout>