<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/black"
              android:orientation="horizontal" tools:context=".MyActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@color/black"
                  android:orientation="vertical"
                  tools:context=".MyActivity">
        <ImageButton
                style="@style/BigButtons"
                android:text="nahled"
                android:id="@+id/nahledBtn"
                android:contentDescription="@string/NahledBtbDesription"
                android:onClick="clickPreview"
                />
        <Button
                style="@style/BigButtons"
                android:text="@string/final_delete"
                android:onClick="clickDelete"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@color/black"
                  android:orientation="vertical" tools:context=".MyActivity">
        <Button
                style="@style/BigButtons"
                android:text="@string/final_facebook"
                android:onClick="clickFacebook"/>
        <Button
                style="@style/BigButtons"
                android:text="@string/final_sdílet"
                android:onClick="clickShare"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@color/black"
                  android:orientation="vertical" tools:context=".MyActivity">
        <Button
                style="@style/BigButtons"
                android:text="@string/final_twitter"
                android:onClick="clickTwitter"/>
        <Button
                style="@style/BigButtons"
                android:text="@string/final_instagram"
                android:onClick="clickInstagram"/>
    </LinearLayout>

</LinearLayout>